@@ -11,6 +11,7 @@ Legend:
 1.6.8 - not released yet
 ========================
 * Updated Greek translation
+* Ticket #1936, Audio Switcher: Improve the normalization algorithm to avoid huge volume variations
 
 
 1.6.7 - 25 April 2013
